--- a/prj/login/login.html
+++ b/prj/login/login.html
@@ -13,9 +13,8 @@
           <label for="pwd">Password:</label>
           <input type="password" class="form-control" id="pwd" ng-model="pwd">
         </div>
-        <button type="submit" class="btn btn-primary" ng-click="login()">Login</button>
-        <a class="btn btn-primary " ng-href="#!/main" role="button">Main Forward</a>
-        <a class="btn btn-primary " ng-href="#!/home" role="button">I'm so out of here</a>
+        <button type="button" class="btn btn-primary" ng-click="login()" >Login</button>
+        <button class="btn btn-primary" ng-click="out()">I'm so out of here</button>
       </form>
 </div>
 
