--- a/prj/movies/moviesdirective.html
+++ b/prj/movies/moviesdirective.html
@@ -35,16 +35,29 @@
 </form>
 
 <br>
-<select class="form-control" ng-model="sortByIs">
-  <option value="None">-- Select --</option>
-  <option value="name">Name</option>
-  <option value="director">Director</option>
-  <option value="length">Length</option>
-</select>
+<div class="container">
+  <h4>Sort by</h4>
+  <select class=" form-control " ng-model="sortByIs ">
+    <option value="None ">-- Select --</option>
+    <option value="name ">Name</option>
+    <option value="director ">Director</option>
+    <option value="length ">Length</option>
+  </select>
+</div>
+<div class="container">
+  <h4>Search Movies</h4>
+  <form class="search-form ">
+    <input type="text " class="form-control " placeholder="Search Movie " ng-model="queryText " ng-change="searchChange() ">
+       <div class="search-results list-group " ng-show="searchResults.length > 0" >
+    <!--      <a href="#" class="list-group-item list-group-item-action" ng-repeat="result in searchResults" ng-click="addActor(result)">{{result.name}}</a>-->
+       </div>
+  </form>
+</div>
+
 
 <hr>
 <div class="accordion__container">
-  <div class="accordion__tab col-sm-12 col-md-6 col-lg-4" data-ng-repeat="movie in movies | orderBy: sortByIs">
+  <div class="accordion__tab col-sm-12 col-md-6 col-lg-4" data-ng-repeat="movie in movies | filter: queryText | orderBy: sortByIs">
     <div class="accordion__tab-title" ng-click="openTab($index)">{{movie.name}} </div>
     <div class="accordion__tab-content" ng-show="isOpenTab($index)">
       <div class="card ">
