--- a/prj/lectures/lecturesdirective.html
+++ b/prj/lectures/lecturesdirective.html
@@ -4,3 +4,37 @@
 <br>
 <br>
 <br>
+<div class="container">
+    <h1>
+        Lectures
+    </h1>
+    <div>
+        <!-- <div>
+            <label for="search">Filter:</label>
+            <input type="text" id="search" ng-model="searchText">
+        </div> -->
+
+        <table class="table">
+            <!-- <tr>
+                <th ng-click="changeSort('brand')">Brand</th>
+                <th ng-click="changeSort('model')">Model</th>
+                <th ng-click="changeSort('year')">Year</th>
+                <th ng-click="changeSort('km')">KM</th>
+                <th>Km/Year</th>
+                <th ng-click="changeSort('testDate')">Test Date</th>
+            </tr> -->
+            <!-- <tr ng-repeat="lecture in lectures | filter: filterCar | orderBy: sortProp : false" ng-click="openCar(car)"> -->
+            <tr ng-repeat="lecture in lectures >
+                <td>{{lecture.lectureDate}}</td>
+                <td>{{lecture.course.courseNum}}</td>
+                <td>{{lecture.course.courseName}}</td>
+                <td>{{lecture.lectureNum}}</td>
+                <td>{{lecture.lectureTitle}}</td>
+                <td>{{lecture.about}}</td>
+                <td>{{lecture.course.univercity.uniName}}</td>
+                <td>{{lecture.course.univercity.uniAddress}}</td>
+            </tr>
+        </table>
+    </div>
+
+   
