--- a/prj/login/login.html
+++ b/prj/login/login.html
@@ -13,8 +13,8 @@
           <label for="pwd">Password:</label>
           <input type="password" class="form-control" id="pwd" ng-model="pwd">
         </div>
-        <button type="button" class="btn btn-primary" ng-click="login()" >Login</button>
-        <button class="btn btn-primary" ng-click="out()">I'm so out of here</button>
+        <button class="btn btn-primary" ng-click="login()" >Login</button>
+        <button class="btn btn-primary" ng-click="logout()">I'm so out of here</button>
       </form>
 </div>
 
