--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -16,8 +16,8 @@
             <a class="nav-link" href="#!/movies" id="linkAbout">Movies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!/courses" id="linkAbout">Courses</a>
-          </li>
+            <a class="nav-link" href="#!/lectures" id="linkLectures">Lectures</a>
+          </li>  
         <li class="nav-item">
           <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
         </li>
