--- a/prj/main/maindirective.html
+++ b/prj/main/maindirective.html
@@ -14,37 +14,38 @@
 
     <!-- from the Lectures page -->
     <div class="container">
-      <h3>Coming Soon</h3>
-      <div>
-        <p>Lectures' Details</p>
-        <!-- <div>
-                    <label for="search">Filter:</label>
-                    <input type="text" id="search" ng-model="searchText">
-                </div> -->
+      <h4>Coming Soon Lectures</h4>
+      {{lecture}}
+      <div class="container">
 
-        <!-- <table class="table">
+        <div>
+          <label for="search">Filter:</label>
+          <input type="text" id="search" ng-model="searchText">
+        </div>
+
+        <table class="table">
           <tr>
-            <th ng-click="changeSort('brand')">Date</th>
-            <th ng-click="changeSort('model')">Course Number</th>
-            <th ng-click="changeSort('year')">Course Name</th>
-            <th ng-click="changeSort('km')">Lecture Number</th>
-            <th ng-click="changeSort('brand')">Lecture Title</th>
-            <th ng-click="changeSort('model')">About</th>
-            <th ng-click="changeSort('year')">Univercity</th>
-            <th ng-click="changeSort('km')">Address</th>
-          </tr> -->
-        <!-- <tr ng-repeat="lecture in lectures | filter: filterCar | orderBy: sortProp : false" ng-click="openCar(car)"> -->
-        <!-- <tr ng-repeat="lecture in lectures >
+            <th ng-click="changeSort('lectureDate')">Date</th>
+            <th ng-click="changeSort('course.courseNum')">Course Number</th>
+            <th ng-click="changeSort('course.courseName')">Course Name</th>
+            <th ng-click="changeSort('lectureNum')">Lecture Number</th>
+            <th>Lecture Title</th>
+            <th>About</th>
+            <th ng-click="changeSort('course.univercity.uniName')">Univercity</th>
+            <th ng-click="changeSort('course.univercity.uniAddress')">Address</th>
+          </tr> 
+          <!-- <tr ng-repeat="lecture in lectures | filter: filterCar | orderBy: sortProp : false" ng-click="openCar(car)"> -->
+          <tr ng-repeat="lecture in lectures> 
                         <td>{{lecture.lectureDate}}</td>
                         <td>{{lecture.course.courseNum}}</td>
-                        <td>{{lecture.course.courseName}}</td>
+                        <td>{{lecture.course.courseNum}}</td>
                         <td>{{lecture.lectureNum}}</td>
                         <td>{{lecture.lectureTitle}}</td>
                         <td>{{lecture.about}}</td>
                         <td>{{lecture.course.univercity.uniName}}</td>
                         <td>{{lecture.course.univercity.uniAddress}}</td>
           </tr>
-    </table> -->
+    </table>
       </div>
     </div>
 
