--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="#!/main" id="linkMain">DashBoard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!/movies" id="linkAbout">Movies</a>
+            <a class="nav-link" href="#!/movies" id="linkMovies">Movies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!/lectures" id="linkLectures">Lectures</a>
