--- a/index.html
+++ b/index.html
@@ -31,17 +31,25 @@
   <script src="login-controller.js"></script>
 
   <script src="main-controller.js"></script>
+
+  <script src="lectureService.js"></script>
   <script src="lectures-controller.js"></script>
+  <script src="lectureDetails-controller.js"></script>
+
   <script src="actors-controller.js"></script>
   <script src="actorservice.js"></script>
   <script src="actorTMDBservice.js"></script>
   <script src="movies-controller.js"></script>
   <script src="movieservice.js"></script>
 
+
+
+
   <script src="navbar-controller.js"></script>
   <script src="about-controller.js"></script>
 
   <script src="activeUserService.js"></script>
+
   <script src="carService.js"></script>
 
   <link rel="stylesheet" href="style.css" />
