--- a/prj/home/home.html
+++ b/prj/home/home.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <div class="jumbotron">
-    <h1 class="display-3">Einstein Prof DB</h1>
+    <h2 class="display-3">Movies Prof DB</h2>
     <p class="lead">AngularJS App :)</p>
     <hr class="my-2">
     <p class="lead">
-        <!-- <a class="btn btn-primary btn-lg" ng-href="/login" role="button">Go for it!</a>
-         -->
-         <a class="btn btn-primary btn-lg" ng-href="#!/login" role="button">Go for it!</a>
-         <a class="btn btn-primary btn-lg" ng-href="#!/main" role="button">Main Forward</a>
-         
-        
-    </p> 
-   <p>Home</p>>
+        <a class="btn btn-primary btn-lg" ng-href="#!/login" role="button">Go for it!</a>
+    </p>
+
 </div>
