--- a/prj/login/login.html
+++ b/prj/login/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div class="container">
-    <h1>Login to Movies DB App</h1>
+    <h1>Login to Movies Prof DB</h1>
     <div class="alert alert-danger" ng-show="invalidCredentails">
             <strong>Error!</strong> Invalid email or password.
     </div>
