--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top">
-  <a class="navbar-brand" id="BrandLink" href="#">Einstein Prof</a>
+  <a class="navbar-brand" id="BrandLink" href="#">Movies Prof DB</a>
   <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,11 +23,11 @@
         <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
       </li>
     </ul>
-    <!-- <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item">
             <a class="nav-link" ng-click="logout()" href="#!/home">Logout</a>
         </li>
-    </ul> -->
+    </ul>
   </div>
 </nav>
 <br>
