--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
   <script src="actorTMDBservice.js"></script>
   <script src="movies-controller.js"></script>
   <script src="movieservice.js"></script>
-
+  <script src="uni-controller.js"></script>
+  <script src="uniService.js"></script>
+  <script src="contact-controller.js"></script>
+  
+  
 
 
 
@@ -66,49 +70,50 @@
 <body ng-app="moviesApp" ng-cloak>
 
   
+  <!-- <div id="nav" ng-show="navigation"> -->
+    <div id="nav">
+      <!-- <navbar> </navbar> -->
+      <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top">
+        <a class="navbar-brand" id="BrandLink" href="#">Einstein Prof</a>
+        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#!/about" id="linkAbout">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!/main" id="linkMain">DashBoard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!/movies" id="linkAbout">Movies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!/courses" id="linkAbout">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" ng-click="logout()" href="#!/home">Logout</a>
+            </li>
+          </ul>
   
-  <div id="nav" >
-    <!-- <navbar> </navbar> -->
-    <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top">
-      <a class="navbar-brand" id="BrandLink" href="#">Einstein Prof</a>
-      <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#!/about" id="linkAbout">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!/main" id="linkMain">DashBoard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!/movies" id="linkAbout">Movies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!/courses" id="linkAbout">Courses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" ng-click="logout()" href="#!/home">Logout</a>
-          </li>
-        </ul>
+  
+  
+        </div>
+      </nav>
+  
+  
 
-
-
-      </div>
-    </nav>
-
-
-  </div>
-
-  <div ng-view> </div>
-  <navbar></navbar>
+  <div ng-view> 
+  <!-- <navbar></navbar> -->
+  
+</div>
 </body>
 
 </html>
