--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 
   <script data-require="angularjs@1.6.4" data-semver="1.6.4" src="https://code.angularjs.org/1.6.4/angular.min.js"></script>
-  <link data-require="bootstrap@4.0.0" data-semver="4.0.0" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+  <link data-require="bootstrap@4.0.0" data-semver="4.0.0" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  />
 
 
 
@@ -49,8 +50,8 @@
   <script src="uni-controller.js"></script>
   <script src="uniService.js"></script>
   <script src="contact-controller.js"></script>
-  
-  
+
+
 
 
 
@@ -69,51 +70,57 @@
 
 <body ng-app="moviesApp" ng-cloak>
 
-  
-  <!-- <div id="nav" ng-show="navigation"> -->
-    <div id="nav">
-      <!-- <navbar> </navbar> -->
-      <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top">
-        <a class="navbar-brand" id="BrandLink" href="#">Einstein Prof</a>
-        <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#!/about" id="linkAbout">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#!/main" id="linkMain">DashBoard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#!/movies" id="linkAbout">Movies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#!/courses" id="linkAbout">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" ng-click="logout()" href="#!/home">Logout</a>
-            </li>
-          </ul>
-  
-  
-  
-        </div>
-      </nav>
-  
+
+
+
+
+  <!-- <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top">
+    <a class="navbar-brand" id="BrandLink" href="#">Einstein Prof</a>
+    <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#!/about" id="linkAbout">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!/main" id="linkMain">DashBoard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!/movies" id="linkMovies">Movies</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#!/courses" id="linkCourses">Courses</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#!/lecture" id="linkLecture">Lecture</a>
+          </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" ng-click="logout()" href="#!/home">Logout</a>
+        </li>
+      </ul>
+
+
+
+    </div>
+  </nav> -->
+
+
   
 
-  <div ng-view> 
-  <!-- <navbar></navbar> -->
-  
-</div>
+  <div ng-view>
+    <navbar></navbar>
+    
+  </div>
+
 </body>
 
 </html>
