--- a/index.html
+++ b/index.html
@@ -114,11 +114,14 @@
   </nav> -->
 
 
+
+  <!-- <navbar></navbar> -->
+
   
 
   <div ng-view>
-    <navbar></navbar>
-    
+
+
   </div>
 
 </body>
