--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -19,6 +19,9 @@
           <a class="nav-link" href="#!/lectures" id="linkLectures">Lectures</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#!/unis" id="linkUnis">Universities</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#!/about" id="linkAbout">About</a>
         </li>
         <li class="nav-item">
