--- a/prj/universities/uni.html
+++ b/prj/universities/uni.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<navbar></navbar>
 <!-- Display-->
 <div class="container" id="UniDisplay">
 
@@ -13,7 +14,7 @@
                 <input type="text" id="search" ng-model="searchText">
             </div>
        
-            <table id="unis-tab" class=" table ">
+            <table id="unis-tab" class=" table table-condensed">
                 <tr>
                     <th ng-click="changeSort('uniName')">Name</th>
                     <th ng-click="changeSort('uniAddress')">Address</th>
