--- a/prj/main/maindirective.html
+++ b/prj/main/maindirective.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 <!--Main Display-->
+<navbar></navbar>
 <div class="container" id="MainDisplay">
-  <!-- <navbar></navbar> -->
-
+  
   <div class="jumbotron">
 
     <h3 class="text-center">Prof Dashboard</h3>
