--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#!/contact" id="linkContact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="" id="userName">Hi {{name.fname}}!</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <li class="nav-item">
