--- a/prj/about/about.html
+++ b/prj/about/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <navbar></navbar>
 <div class="container">
-        <div class="jumbotron">
-            <br>
-                <h1 class="text-center">I'm all about the <b>Einstein Prof App</b>...</h1>
-                <br><br><br>
-                <h3 class="text-center"> By courtesy of Appleseeds Academy</h3>
-                <br>
-                <h3 class="text-center">And the Guarding Angel </h3>
-                <h3 class="text-center">Nir Channes</h3>
-                </div>
+    <!-- <div class="jumbotron"> -->
+        <br>
+        <h1 class="text-center">I'm all about the
+            <b>Einstein Prof App</b>...</h1>
+        <br>
+        <br>
+        <br>
+        <h3 class="text-center"> By courtesy of Appleseeds Academy</h3>
+        <br>
+        <h3 class="text-center">And the Guarding Angel </h3>
+        <h3 class="text-center">Nir Channes</h3>
+    <!-- </div> -->
 </div>
-
