--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
   <script src="actorTMDBservice.js"></script>
   <script src="movies-controller.js"></script>
   <script src="movieservice.js"></script>
+  <script src="courses-controller.js"></script>
+  <script src="courses-controller.js"></script>
   <script src="uni-controller.js"></script>
   <script src="uniService.js"></script>
   <script src="contact-controller.js"></script>
-
-
+  <script src="coursesService.js"></script>
+  
 
 
 
