--- a/prj/navbar/navbar.html
+++ b/prj/navbar/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top " ng-show="showNav">
   <nav class="navbar navbar-expand-md  bg-light navbar-light fixed-top ">
     <a class="navbar-brand" id="BrandLink" href="#">Movies Prof DB</a>
-    <b> Hi {{name.fname}}!</b>
+    <b> Welcome {{name.fname}}!</b>
     <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
