--- a/prj/courses/coursesdirective.html
+++ b/prj/courses/coursesdirective.html
@@ -5,28 +5,74 @@
 <div class="container" id="CoursesDisplay">
 
     <div class="jumbotron">
-
-        <h5 class="text-center">Courses</h5>
-
         <div class="container">
-            <div>
-                <label for="search">Filter:</label>
-                <input type="text" id="search" ng-model="searchText">
-            </div>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="container">
+                        <form>
+                            <div class="form-row ">
+                                <div class=" form-group ">
+                                    <label for="courseNum"> Number</label>
+                                    <input type="text" class="form-control" id="courseNum" placeholder="Course Number" ng-model="courseNum">
+                                </div>
+                                <div class=" form-group ">
+                                    <label for="courseName">Course Name</label>
+                                    <input type="text" class="form-control" id="courseName" placeholder="Course Name" ng-model="courseName">
+                                </div>
+                                <div class=" form-group ">
+                                    <label for="courseSyllabus">Course Syllabus</label>
+                                    <textarea class="form-control" rows="5" id="courseSyllabus" placeholder="Course Syllabus" ng-model="courseSyllabus"></textarea>
+                                </div>
+                                <div class=" form-group ">
+                                    <label for="numOfLectures">Total lectures Number</label>
+                                    <input type="text" class="form-control" id="numOfLectures" placeholder="Total lectures Number" ng-model="numOfLectures">
+                                </div>
+                                <div class=" form-group ">
+                                    <label for="semester">Semester</label>
+                                    <input type="text" class="form-control" id="semester" placeholder="Semester" ng-model="semester">
+                                </div>
+                                <div class="form-group">
+                                    <label for="uniName">Select University name:</label>
+                                    <select class="form-control" id="uniName" ng-model="uni" ng-options="uni.uniName for uni in universities">
+                                        {{uni.uniName}}
+                                    </select>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-light" id="FormBtnAdd" ng-click="addFormCourse (courseNum,courseName,courseSyllabus,numOfLectures,semester,uni)">Add</button>
+                            <button type="reset" class="btn btn-light" id="FormBtnReset">Reset</button>
+                        </form>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+                <hr>
+                <div class="col-12 col-md-8">
+                    <div class="container">
+                        <div>
+                            <label for="search">Filter:</label>
+                            <input type="text" id="search" ng-model="searchText">
+                        </div>
+                        <hr>
+                        <table id="courses-tab" class=" table table-condensed">
+                            <tr>
+                                <th ng-click="changeSort('uniName')">#</th>
+                                <th ng-click="changeSort('uniName')">Course Name</th>
+                                <th ng-click="changeSort('uniAddress')">Course Name</th>
+                            </tr>
+                            <tr ng-repeat="course in courses | filter: searchText | orderBy: sortProp : false" ng-click=" ">
+                                <td>{{course.serialNum}}</td>
+                                <td>{{course.courseNum}}</td>
+                                <td>{{course.courseName}}</td>
+                                <td>{{course.semester}}</td>
+                                <td>{{course.courseSyllabus}}</td>
+                                <td>{{course.numOfLectures}}</td>
+                                <td>{{course.uniName}}</td>
+                        </table>
+                    </div>
 
-            <table id="courses-tab" class=" table table-condensed">
-                <!-- <tr>
-                    <th ng-click="changeSort('uniName')">Name</th>
-                    <th ng-click="changeSort('uniAddress')">Address</th>
-                </tr> -->
-                <tr ng-repeat="course in courses | filter: searchText | orderBy: sortProp : false" ng-click="openCourse (course) ">
-                    <td>{{course.courseNum}}</td>
-                    <td>{{course.courseName}}</td>
-                    <td>{{course.semester}}</td>
-                    <td>{{course.courseSyllabus}}</td>
-                    <td>{{course.numOfLectures}}</td>
-                    <td>{{course.uniName}}</td>
-            </table>
+                </div>
+            </div>
+            <br>
         </div>
     </div>
 </div>
