--- a/prj/lectures/lecturesdirective.html
+++ b/prj/lectures/lecturesdirective.html
@@ -3,42 +3,73 @@
 <navbar></navbar>
 <div class="container">
   <div class="jumbotron">
-    <h3>Lectures</h3>
     <div class="container">
-      <h5>Coming Soon Lectures</h5>
-
-      <div class="container">
-
-        <div>
-          <label for="search">Filter:</label>
-          <input type="text" id="search" ng-model="searchText">
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <div class="container">
+            <div class="form-row ">
+              <div class=" form-group ">
+                <label for="lectureTitle">Title</label>
+                <input type="text" class="form-control" id="lectureTitle" placeholder="Lecture Title" ng-model="lectureTitle">
+              </div>
+              <div class=" form-group ">
+                <label for="lectureNum">Lecture Number</label>
+                <input type="text" class="form-control" id="lectureNum" placeholder="Lecture Number" ng-model="lectureNum">
+              </div>
+              <div class=" form-group ">
+                <label for="lectureDate">Lecture Date</label>
+                <input type="date" class="form-control" id="lectureDate" placeholder="Lecture Date" ng-model="lectureDate">
+              </div>
+              <div class=" form-group ">
+                <label for="about">Lecture Summary</label>
+                <input type="text" class="form-control" id="about" placeholder="Lecture Summary" ng-model="about">
+              </div>
+              <div class="form-group">
+                <label for="course">Select Course:</label>
+                <select class="form-control" id="course" ng-model="course" ng-options="course.courseName for course in courses">
+                  {{course.courseName}}
+                </select>
+              </div>
+            </div>
+            <button type="button" class="btn btn-light" id="FormBtnAdd" ng-click="addFormLecture (lectureTitle,lectureNum,lectureDate,about,course)">Add</button>
+            <button type="reset" class="btn btn-light" id="FormBtnReset">Reset</button>
+            </form>
+            <br>
+            <br>
+          </div>
         </div>
         <hr>
-        <table id="lectures-tab" class=" table ">
-          <tr>
-            <th ng-click="changeSort('lectureDate')">Date</th>
-            <th ng-click="changeSort('course.courseNum')">Course Number</th>
-            <th ng-click="changeSort('course.courseName')">Course Name</th>
-            <th ng-click="changeSort('lectureNum')">Lecture Number</th>
-            <th>Lecture Title</th>
-            <th>About</th>
-            <th ng-click="changeSort('course.univercity.uniName')">University</th>
-            <th ng-click="changeSort('course.univercity.uniAddress')">Address</th>
-          </tr>
-
-          <tr ng-repeat="lecture in lectures | filter: searchText " ng-click="openLecture(lecture) ">
-            <!-- <tr ng-repeat="lecture in lectures | filter: searchText | orderBy: sortProp : false " ng-click="openLecture(lecture) ">  -->
-            <td>{{lecture.lectureDate}}</td>
-            <td>{{lecture.course.courseNum}}</td>
-            <td>{{lecture.course.courseName}}</td>
-            <td>{{lecture.lectureNum}}</td>
-            <td>{{lecture.lectureTitle}}</td>
-            <td>{{lecture.about}}</td>
-            <td>{{lecture.course.univercity.uniName}}</td>
-            <td>{{lecture.course.univercity.uniAddress}}</td>
-          </tr>
-        </table>
+        <div class="col-12 col-md-9">
+          <div class="container">
+            <div>
+              <label for="search">Filter:</label>
+              <input type="text" id="search" ng-model="searchText">
+            </div>
+            <hr>
+            <table id="lectures-tab" class=" table ">
+              <tr>
+                <th ng-click="changeSort('lectureDate')">Date</th>
+                <th ng-click="changeSort('course.courseNum')">Course Number</th>
+                <th ng-click="changeSort('course.courseName')">Course Name</th>
+                <th ng-click="changeSort('lectureNum')">Lecture Number</th>
+                <th>Lecture Title</th>
+                <th>About</th>
+                <th ng-click="changeSort('course.univercity.uniName')">University</th>
+                <th ng-click="changeSort('course.univercity.uniAddress')">Address</th>
+              </tr>
+              <tr ng-repeat="lecture in lectures | filter: searchText " ng-click="openLecture(lecture) ">
+                <!-- <tr ng-repeat="lecture in lectures | filter: searchText | orderBy: sortProp : false " ng-click="openLecture(lecture) ">  -->
+                <td>{{lecture.lectureDate}}</td>
+                <td>{{lecture.course.courseNum}}</td>
+                <td>{{lecture.course.courseName}}</td>
+                <td>{{lecture.lectureNum}}</td>
+                <td>{{lecture.lectureTitle}}</td>
+                <td>{{lecture.about}}</td>
+                <td>{{lecture.course.uni.uniName}}</td>
+                <td>{{lecture.course.uni.uniAddress}}</td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
