--- a/prj/lectures/lectures.html
+++ b/prj/lectures/lectures.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<div id="main-lectures" class="container" ng-controller="lecturesCtrl">
+<div id="lecturesDisplay" class="container" ng-controller="lecturesDispCtrl">
   <h5>Coming Soon Lectures</h5>
 
   <div class="container">
